# py2pd

./: .gitignore  CHANGELOG.md  Makefile  README.md  REVIEW.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.rst  architecture.rst  conf.py  index.rst
src/py2pd/: __init__.py  api.py  ast.py  discover.py
src/py2pd/integrations/: __init__.py  cypd.py  hvcc.py
tests/: __init__.py  test_api.py  test_ast.py  test_discover.py  test_examples.py  test_hvcc.py  test_validate.py
tests/examples/: example.py  pd_example.pd
