[project]
name = "py2pd"
version = "0.1.2"
description = "Roundtrip parsing and generation of pure-data patches from python"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" }
]
keywords = ["puredata", "pd", "audio", "dsp", "music", "synthesis", "patching"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
extras = ["cypd", "hvcc"]

[project.urls]
Homepage = "https://github.com/shakfu/py2pd"
Repository = "https://github.com/shakfu/py2pd"
Issues = "https://github.com/shakfu/py2pd/issues"
Changelog = "https://github.com/shakfu/py2pd/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "ruff>=0.14.13",
    "twine>=6.2.0",
]
docs = [
    "sphinx>=8.0",
    "sphinx-rtd-theme>=3.0",
    "sphinx-autodoc-typehints>=2.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=py2pd --cov-report=term-missing"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["cypd", "hvcc"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
